# IntraAbstractionPolicies

./: CMakeLists.txt  README.md
ExperimentConfigs/InAbsPolicies/: eval.yml
include/: Arena.h
include/Agents/: Agent.h
include/Agents/Mcts/: MctsAgent.h  MctsNode.h
include/Agents/Oga/: OgaAbstractNodes.h  OgaAgent.h  OgaGroundNodes.h  OgaTree.h  OgaUtils.h
include/Games/: Gamestate.h
include/Games/MDPs/: AcademicAdvising.h  BinPacking.h  CooperativeRecon.h  CrossingTraffic.h  EarthObservation.h  Elevators.h  FixedActionSpaceEnv.h  GameOfLife.h  GraphTraversal.h  JoinFive.h  Knapsack.h  Manufacturer.h  MultiArmedBandit.h  Navigation.h  PushYourLuck.h  RaceTrack.h  RedFinnedBlueEye.h  SailingWind.h  Saving.h  SkillsTeaching.h  SupplyChain.h  SysAdmin.h  Tamarisk.h  ToySoccer.h  Traffic.h  TravellingSalesPerson.h  TriangleTireworld.h  Wildfire.h  WildlifePreserve.h
include/Games/TwoPlayerGames/: CaptureTheFlag.h  Chess.h  Connect4.h  Constrictor.h  KillTheKing.h  NumbersRace.h  Othello.h  Pusher.h  Pylos.h  Quarto.h  TicTacToe.h  WinLossGames.h
include/Games/Wrapper/: FiniteHorizon.h  HeuristicsAsReward.h  MultiPlayerToMDP.h  RandomStart.h  ScriptedStart.h
include/Utils/: MiscAnalysis.h
resources/AcademicAdvisingCourses/: 0_Anand.txt  10_IPPC.txt  1_Anand.txt  1_IPPC.txt  2_Anand.txt  2_IPPC.txt  3_Anand.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/BinPackingSetups/: first_simple_test_setup.txt
resources/CTFMaps/: standard.txt
resources/CooperativeReconSetups/: 10_IPPC.txt  1_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt  test.txt
resources/DiceProbs/: 10_IPPC.txt  11_IPPC.txt  12_IPPC.txt  13_IPPC.txt  14_IPPC.txt  15_IPPC.txt  16_IPPC.txt  17_IPPC.txt  18_IPPC.txt  19_IPPC.txt  1_IPPC.txt  20_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/EarthObservationMaps/: 10_IPPC.txt  11_IPPC.txt  12_IPPC.txt  13_IPPC.txt  14_IPPC.txt  15_IPPC.txt  16_IPPC.txt  17_IPPC.txt  18_IPPC.txt  19_IPPC.txt  1_IPPC.txt  20_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/ElevatorSetups/: 10_IPPC.txt  1_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/GameOfLifeMaps/: 10_IPPC.txt  1_Anand.txt  1_IPPC.txt  3_Anand.txt  3_IPPC.txt  4_Anand.txt  4_IPPC.txt  5_Anand.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/GraphTraversalGraphs/: 0.txt  aupo2AbsActions.txt  horizon.txt  smartRewardTest1.txt  snowflake.txt
resources/KTKMaps/: standard.txt
resources/KnapsackSetups/: first_simple_test_setup.txt  multiple_knapsacks_test_setup.txt
resources/ManufacturerSetups/: 10_IPPC.txt  11_IPPC.txt  1_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/PusherMaps/: standard.txt
resources/RedFinnedBlueEyesMaps/: 10_IPPC.txt  11_IPPC.txt  12_IPPC.txt  13_IPPC.txt  14_IPPC.txt  15_IPPC.txt  16_IPPC.txt  17_IPPC.txt  18_IPPC.txt  19_IPPC.txt  1_IPPC.txt  20_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/SkillsTeachingSkills/: 10_IPPC.txt  1_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/SupplyChainSetups/: first_simple_test_setup.txt  smaller_test_setup.txt
resources/SysAdminTopologies/: 1_Anand.txt  1_IPPC.txt  2_Anand.txt  2_IPPC.txt  3_Anand.txt  3_IPPC.txt  4_Anand.txt  4_IPPC.txt  5_Anand.txt  5_IPPC.txt  6_IPPC.txt
resources/TamariskMaps/: 10_IPPC.txt  1_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/TrafficModels/: 10_IPPC.txt  1_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/TravellingSalesPersonMaps/: first_simple_test_setup.txt
resources/TriangleTireworlds/: 10_IPPC.txt  1_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/WildfireSetups/: 10_IPPC.txt  1_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
resources/WildlifeSetups/: 10_IPPC.txt  11_IPPC.txt  12_IPPC.txt  13_IPPC.txt  14_IPPC.txt  15_IPPC.txt  16_IPPC.txt  17_IPPC.txt  18_IPPC.txt  19_IPPC.txt  1_IPPC.txt  20_IPPC.txt  2_IPPC.txt  3_IPPC.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt
slurm/: statscollect_Q.sh
src/: Arena.cpp  demo.cpp  main.cpp
src/Agents/: OneStepLookaheadAgent.cpp
src/Agents/Mcts/: MctsAgent.cpp  MctsNode.cpp
src/Agents/Oga/: OgaAbstractNodes.cpp  OgaAgent.cpp  OgaGroundNodes.cpp  OgaTree.cpp  OgaUtils.cpp  TestOga.cpp
src/Games/MDPs/: AcademicAdvising.cpp  BinPacking.cpp  CooperativeRecon.cpp  CrossingTraffic.cpp  EarthObservation.cpp  Elevators.cpp  FixedActionSpaceEnv.cpp  GameOfLife.cpp  GraphTraversal.cpp  JoinFive.cpp  Knapsack.cpp  Manufacturer.cpp  MultiArmedBandit.cpp  Navigation.cpp  PushYourLuck.cpp  RaceTrack.cpp  RedFinnedBlueEye.cpp  SailingWind.cpp  Saving.cpp  SkillsTeaching.cpp  SupplyChain.cpp  SysAdmin.cpp  Tamarisk.cpp  ToySoccer.cpp  Traffic.cpp  TravellingSalesPerson.cpp  TriangleTireworld.cpp  Wildfire.cpp  WildlifePreserve.cpp
src/Games/TwoPlayerGames/: CaptureTheFlag.cpp  Chess.cpp  Connect4.cpp  Constrictor.cpp  KillTheKing.cpp  NumbersRace.cpp  Othello.cpp  Pusher.cpp  Pylos.cpp  Quarto.cpp  TicTacToe.cpp  WinLossGames.cpp
src/Games/Wrapper/: HeuristicsAsReward.cpp  MultiPlayerToMDP.cpp  RandomStart.cpp  ScriptedStart.cpp
src/Utils/: AgentMaker.cpp  CLink.cpp  MemoryAnalysis.cpp  MiscAnalysis.cpp  ModelMaker.cpp
